--- a/app/MemberModule/components/TopicsListControl.latte
+++ b/app/MemberModule/components/TopicsListControl.latte
@@ -38,7 +38,7 @@
 
             <td class="col author right">
                 <div class="no-wrap">
-                    <a title="profil uživatele" href="{plink Member:view $topic->member_id}">
+                    <a title="profil uživatele" href="{plink User:view $topic->member_id}">
 						{include svg name => user-o} {$topic->member->surname} {$topic->member->name}
                     </a>
                 </div>
