--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -33,7 +33,7 @@
 	<div id="top">
 		<div id="top-right">
 			<span id="profile">
-			  <a n:href="Member:profile"><b>{$user->identity->name} {$user->identity->surname}</b></a> ({$user->id})
+			  <a n:href="User:profile"><b>{$user->identity->name} {$user->identity->surname}</b></a> ({$user->id})
 			</span>
 			<a n:href="Sign:out">odhlásit</a>
 		</div>
