--- a/app/MemberModule/templates/Mail/newMember.latte
+++ b/app/MemberModule/templates/Mail/newMember.latte
@@ -10,7 +10,7 @@
             {link //Sign:restorePassword pubkey => $session->pubkey}</a><br>
         Tento odkaz bude fungovat 24 hodin (do {$session->date_end|date:'d.m.Y H:i:s'})</p>
 
-    <p>Svůj profil najdeš na adrese: <a n:href="//Member:profile">{link //Member:profile}</a><br>
+    <p>Svůj profil najdeš na adrese: <a n:href="//User:profile">{link //User:profile}</a><br>
         Zde si upravit své osobní údaje.</p>
 
     <p>Vstup na stránky pro členy: <a n:href="//Akce:default">{link //Akce:default}</a></p>
