--- a/app/MemberModule/templates/Akce.feedback.latte
+++ b/app/MemberModule/templates/Akce.feedback.latte
@@ -4,10 +4,10 @@
 <style type="text/css" n:syntax="off">
 h2 { margin-top: 1ex;}
 
-table#items td, table th { vertical-align: top; padding: 1ex 1ex; padding: 0;}
+table#items td, table th { vertical-align: top; padding: 0;}
 table#items { border-collapse: collapse; width: 98%;}
 table#items .headerLike { text-align: center; }
-table#items .borderLike { border-width: 3px 0px 0px 0px;}
+table#items .borderLike { border-width: 3px 0 0 0;}
 table#items .top .right { direction: rtl;}
 table#items .bottom .right { padding-right: 1em;}
 table#items .bottom .right .noLink { font-weight: bold;}
@@ -43,7 +43,7 @@ table#items .forum_post { max-width: 45em; padding-left: 1ex }
     <tr class="bottom">
     <td class="right">
         <span class="char">⇨</span> 
-        {if !$item->anonymous} od <a n:href="Member:view,$item->member_id" class="noLink" title="profil uživatele">
+        {if !$item->anonymous} od <a n:href="User:view,$item->member_id" class="noLink" title="profil uživatele">
         {$item->member->surname} {$item->member->name}</a> {else}<b>Anonymní</b>{/if}
     </td>   
     <td class="forum_post">
