--- a/app/PhotoModule/templates/@layout.latte
+++ b/app/PhotoModule/templates/@layout.latte
@@ -21,7 +21,7 @@
 
 	<!--[if IE]><link rel="stylesheet" href="{$baseUri}/css/ie.css" type="text/css"><![endif]-->
 
-	<link rel="alternate" title="VZS Jablonec Fotogalerie" n:href="//:Member:Feed:albums" type="application/rss+xml" n:if="$user->isLoggedIn()">
+	<link rel="alternate" title="VZS Jablonec Fotogalerie" n:href="//:User:Feed:albums" type="application/rss+xml" n:if="$user->isLoggedIn()">
 
 	<script src="{$baseUri}/js/jquery-3.2.1.min.js" type="text/javascript"></script>
 
