--- a/app/MemberModule/templates/User.default.latte
+++ b/app/MemberModule/templates/User.default.latte
@@ -14,7 +14,7 @@
 		.active { display: block; }
 		#tabs ul { margin: 0; padding: 0; margin-top: 1em;}
 		#tabs ul li { background-color: silver; display: inline-block; padding: 1ex; border: 1px solid gray; border-bottom: none; }
-		#tabs ul li a { color: white;}
+		#tabs ul li a { color: white; cursor: pointer;}
 		#tabs ul li.active { background-color: white; position: relative; top: 1px; }
 		#tabs ul li.active a { color: inherit;}
 	</style>
