--- a/app/MemberModule/templates/Sign.in.latte
+++ b/app/MemberModule/templates/Sign.in.latte
@@ -1,14 +1,34 @@
+{block #head}
+<style type="text/css" media="screen" n:syntax="off">
+ 	.social-login a { margin: 0 auto; padding: 0.5ex 0; color: white; display: block; width: 19em; }
+	.social-login a img { vertical-align: -50%; margin-right: 1ex;}
+	.google { background-color: #DC4A38;}
+	.facebook { background-color: #3C5A99;}
+</style>
+{/block}
+
 {block #content}
-  
-  {control signInForm}
+	{control signInForm}
 
-  <hr>
-  
-  <div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
-  
-  <p>Pokud jsi zapomněl/a své přihlašovací jméno a heslo, tak zadej svůj e-mail,
-  a na něj ti přijdou instrukce k jeho obnovení.</p>
+	<div class="social-login">
+		<p>
+			<a rel="nofollow" n:class="google, $googleLastLogin ? last-login" title="Přihlásit se pomocí Google" href="{$googleLoginUrl}">
+				<img src="{$basePath}/img/google+.svg">Přihlásit se pomocí Google
+			</a>
+		</p>
+		{*<p>*}
+			{*<a rel="nofollow" n:class="facebook, $facebookLastLogin ? last-login" title="Přihlásit se pomocí Facebooku" href="{$facebookLoginUrl}">*}
+				{*<img src="{$basePath}/img/facebook.svg">Přihlásit se pomocí Facebooku*}
+			{*</a>*}
+		{*</p>*}
+	</div>
+	<hr>
 
-  <p class="required"><b>{control forgotPassForm}</p>
+	<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
+
+	<p>Pokud jsi zapomněl/a své přihlašovací jméno a heslo, tak zadej svůj e-mail,
+	a na něj ti přijdou instrukce k jeho obnovení.</p>
+
+	<p class="required"><b>{control forgotPassForm}</p>
 
 {/block}
