--- a/app/MemberModule/templates/Sign.in.latte
+++ b/app/MemberModule/templates/Sign.in.latte
@@ -1,6 +1,6 @@
 {block #head}
 <style type="text/css" media="screen" n:syntax="off">
- 	.social-login a { margin: 0 auto; padding: 0.5ex 0; color: white; display: block; width: 19em; }
+ 	.social-login a { margin: 0 auto; padding: 0.5ex 0; color: white; font-size: small; display: block; width: 19em; }
 	.social-login a img { vertical-align: -50%; margin-right: 1ex;}
 	.google { background-color: #DC4A38;}
 	.facebook { background-color: #3C5A99;}
