Facebook login finished

--- a/app/MemberModule/templates/Sign.in.latte
+++ b/app/MemberModule/templates/Sign.in.latte
@@ -16,11 +16,11 @@
 				<img src="{$basePath}/img/google+.svg">Přihlásit se pomocí Google
 			</a>
 		</p>
-		{*<p>*}
-			{*<a rel="nofollow" n:class="facebook, $facebookLastLogin ? last-login" title="Přihlásit se pomocí Facebooku" href="{$facebookLoginUrl}">*}
-				{*<img src="{$basePath}/img/facebook.svg">Přihlásit se pomocí Facebooku*}
-			{*</a>*}
-		{*</p>*}
+		<p>
+			<a rel="nofollow" n:class="facebook, $facebookLastLogin ? last-login" title="Přihlásit se pomocí Facebooku" href="{$facebookLoginUrl}">
+				<img src="{$basePath}/img/facebook.svg">Přihlásit se pomocí Facebooku
+			</a>
+		</p>
 	</div>
 	<hr>
 
