Add secondary email and phone number to user

--- a/app/MemberModule/templates/User.vcf.latte
+++ b/app/MemberModule/templates/User.vcf.latte
@@ -4,6 +4,8 @@ N:{$member->name};{$member->surname}
 FN:{$member->surname}, {$member->name}
 ORG:VZS CCK MS JBC
 TEL;CELL;VOICE:{$member->telefon}
+TEL;HOME;VOICE:{$member->telefon2}
 ADR;HOME:;;{$member->ulice};{$member->mesto};;;CZ
 EMAIL;PREF;INTERNET:{$member->mail}
+EMAIL:{$member->mail2}
 END:VCARD
