--- a/www/subdom/member/css/main.css
+++ b/www/subdom/member/css/main.css
@@ -75,7 +75,7 @@ body a {color: #0065c6; text-decoration: none;}
 body a:hover, body a:focus, body a:active {text-decoration: underline;}
 
 input[type='text'], input[type='password'], input[type='date'], input[type='datetime'], input[type='email'], input[type='number'],
-input[type='time'], input[type='search'], select { 
+input[type='time'], input[type='search'], input[type='tel'], select {
 background-color: #eee; border: 1px solid gray; border-radius: 2px; color: #404040;}
 
 textarea { border: 1px solid gray; background-color: white;
@@ -90,9 +90,10 @@ textarea { min-height: 10em; height: auto; }
 textarea.texyla {background-image: none; border: none;}
 
 input[type='text']:hover, input[type='password']:hover, input[type='date']:hover, input[type='datetime']:hover, 
-input[type='email']:hover, input[type='number']:hover, input[type='time']:hover, textarea:hover, select:hover, 
+input[type='email']:hover, input[type='number']:hover, input[type='time']:hover, textarea:hover, select:hover,
+input[type='tel']:hover, input[type='tel']:focus,
 input[type='text']:focus, input[type='password']:focus, input[type='date']:focus, input[type='datetime']:focus, 
-input[type='email']:focus, input[type='number']:focus, input[type='time']:focus, textarea:focus, select:hover 
+input[type='email']:focus, input[type='number']:focus, input[type='time']:focus, textarea:focus, select:hover
 {border-color: darkorange;}
 
 input[type='date'], input.date {text-align: center}
