Only required fields have bold labels

--- a/app/MemberModule/templates/User.edit.latte
+++ b/app/MemberModule/templates/User.edit.latte
@@ -10,7 +10,8 @@
 	form { margin-top: 1em; }
 	form table, form table textarea { width: 100%}
 	form table th { width: 7em; text-align: left; vertical-align: top;}
-
+	form table th label { font-weight: normal;}
+ 	.required label { font-weight: bold;}
 	#ui-datepicker-div { font-size: 1em;}
 -->
 </style>
