Button text shotify

--- a/app/MemberModule/templates/Sign.in.latte
+++ b/app/MemberModule/templates/Sign.in.latte
@@ -1,6 +1,6 @@
 {block #head}
 <style type="text/css" media="screen" n:syntax="off">
- 	.social-login a { margin: 0 auto; padding: 0.5ex 0; color: white; font-size: small; display: block; width: 19em; }
+ 	.social-login a { margin: 0 auto; padding: 0.5ex 0; color: white; font-size: small; display: block; width: 18em; }
 	.social-login a img { margin-right: 1ex; height: 3ex; vertical-align: middle}
 	.google { background-color: #DC4A38;}
 	.facebook { background-color: #3C5A99;}
@@ -12,13 +12,13 @@
 
 	<div class="social-login">
 		<p>
-			<a rel="nofollow" n:class="google, $googleLastLogin ? last-login" title="Přihlásit se pomocí Google" href="{$googleLoginUrl}">
-				<img src="{$basePath}/img/google+.svg">Přihlásit se pomocí Google
+			<a rel="nofollow" n:class="google, $googleLastLogin ? last-login" title="Přihlásit se pomocí Googlu" href="{$googleLoginUrl}">
+				<img src="{$basePath}/img/google+.svg">Přihlásit se přes Google
 			</a>
 		</p>
 		<p>
 			<a rel="nofollow" n:class="facebook, $facebookLastLogin ? last-login" title="Přihlásit se pomocí Facebooku" href="{$facebookLoginUrl}">
-				<img src="{$basePath}/img/facebook.svg">Přihlásit se pomocí Facebooku
+				<img src="{$basePath}/img/facebook.svg">Přihlásit se přes Facebook
 			</a>
 		</p>
 	</div>
