--- a/app/MemberModule/templates/@svg.latte
+++ b/app/MemberModule/templates/@svg.latte
@@ -1,3 +1,3 @@
 {define svg}
-	<svg n:class='icon, "icon-$name", isset($class) ? $class'><use xlink:href="{$baseUri}/img/symbols.svg#icon-{$name}"></use></svg>
+	<svg n:class='icon, "icon-$name", isset($class) ? $class'><use xlink:href="http://localhost/vzsjablonec/member/img/symbols.svg#icon-{$name}"></use></svg>
 {/define}
