Replace old weird syntax for text search highlight with standartized <mark> HTML tag

--- a/app/MemberModule/components/PostsListControl.latte
+++ b/app/MemberModule/components/PostsListControl.latte
@@ -17,7 +17,7 @@
         </div>
 
         <div class="message">
-            {if !$search}{$post->text|forumTexy|noescape}{else}{$post->text|replace:$search:'*'.$search.' .[highlight]*'|forumTexy|noescape}{/if}
+            {if !$search}{$post->text|forumTexy|noescape}{else}{$post->text|replace:$search:"<mark>$search</mark>"|forumTexy|noescape}{/if}
         </div>
 
         {var $isTopic = ($post->id == $post->forum_topic_id)}
