--- a/www/subdom/member/css/symbols.css
+++ b/www/subdom/member/css/symbols.css
@@ -266,3 +266,11 @@ Single-colored icons can be modified like so:
 .icon-user-o {
   width: 0.8571428571428571em;
 }
+
+.icon-facebook {
+  width: 0.5881428571428571em;
+}
+
+.icon-google-plus {
+  width: 1.2857142857142856em;
+}
